--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,5 @@
 body {
 	background-color: #fff;
 	font-size: 14px;
-	font-family: 'PFBeauSansProReg', verdana, arial, sans-serif;
+	font-family: 'PFBeauSansProReg', sans-serif;
 }
