--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,112 @@
 body {
 	background-color: #fff;
 	font-size: 14px;
-	font-family: 'PFBeauSansProReg', sans-serif;
+	font-family: 'PF BeauSans Pro', sans-serif;
 }
+p {
+	font-size: 14px;
+	font-family: 'PF BeauSans Pro', sans-serif;
+	color:#3e3e3d;
+	font-weight: 400;
+}
+a {
+	font-size: 14px;
+	font-family: 'PF BeauSans Pro', sans-serif;
+	color: #2f4c61;
+	text-decoration: underline;
+}
+a.dashed{
+	text-decoration: none;
+	border-bottom: 1px dashed #2f4c61;
+}
+.bold {
+	font-weight: bold;
+}
+.italic {
+	font-style: italic;
+}
+#wrapper {
+	width: 1150px;
+	margin: 0 auto;
+}
+#page {
+	width: 980px;
+}
+.bold {
+	font-weight: bold;
+}
+.c2f4c61{
+	color: #2f4c61;
+}
+/*HEADER*/
+
+header {
+	height: 108px;
+}
+	header div {
+		display: inline-block;
+		vertical-align: top;
+	}
+	#logo{
+		background-image:url(../img/logo-bg.png);
+		width: 196px;
+		height: 108px;
+		text-align: center;
+	}
+		#logo img{
+			width: 140px;
+			margin-top: 19px;
+		}
+	#search-block {
+		height: 108px;
+		width: 324px;
+		background-image: url(../img/search-block-bg.png);
+	}
+		#search-block form {
+			padding: 40px 0 0 35px;
+		}
+			.search{
+				height: 28px;
+    			border: 1px solid #c7d1dc;
+			}
+				.search input[type="search"]{
+					height: 28px;
+					border: none;
+					padding-left: 13px;
+					outline: none; /* Убираем свечение в Chrome и Safari */
+    				-webkit-appearance: none; /* Убираем рамку в Chrome и Safari */
+    				vertical-align: middle;
+					width: 257px;
+				}
+				.search input[type="submit"]{
+					height: 28px;
+				    border: none;
+				    width: 30px;
+				    background-color: #1e495f;
+				    float: right;
+				    cursor: pointer;
+				    background-image: url(../img/search.png); /* Параметры фона */
+				    background-repeat: no-repeat;
+				    background-position: 50% 50%;
+				}
+	#geo {
+		width: 460px;
+		height: 108px;
+		background-image: url(../img/geo-bg.png);
+		background-repeat: no-repeat;
+		background-position: right;
+	}
+		#contact-block{
+			    padding: 20px 26px;
+		}
+			#contact-block p{
+				padding-top: 3px
+			}
+			#town {
+				padding: 0 15px 40px 15px;
+			    margin: 20px 0 0 -4px;
+			    width: 87px;
+			    border-left: 2px solid #d8dfe8;
+			}
+
+/*HEADER END*/
